<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackgroundb"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jacksonhoang.citygoer.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="100dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/titleAttractions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="#80252222"
                android:text="Museums"
                android:textAlignment="center"
                android:textSize="35dp" />









            <Button
                android:id="@+id/capitalMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Capital Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/capitalmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/capitalMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capital_info"
                android:textColor="#39332d" />



            <Button
                android:id="@+id/nationalMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="National Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/nationalmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/nationalMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/national_info"
                android:textColor="#39332d" />



            <Button
                android:id="@+id/artMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="National Art Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/nationalartmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/artMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/art_info"
                android:textColor="#39332d" />



            <Button
                android:id="@+id/aviationMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Chinese Aviation Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/chineseaviationmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/aviationMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aviation_info"
                android:textColor="#39332d" />


            <Button
                android:id="@+id/filmMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="China national film Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/chinanationalfilmmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/filmMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_info"
                android:textColor="#39332d" />



            <Button
                android:id="@+id/techMuseum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="China Science and Tech Museum"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/chinascienceandtechmuseum"
                android:layout_weight="0.42" />
            <ImageButton
                android:id="@+id/techMuseum1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_info"
                android:textColor="#39332d" />











        </LinearLayout>
    </ScrollView>

</RelativeLayout>

