<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackgroundb"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jacksonhoang.citygoer.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="100dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/titleAttractions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="#80252222"
                android:text="Landmarks"
                android:textAlignment="center"
                android:textSize="35dp" />


            <Button
                android:id="@+id/forbiddenCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Forbidden City"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/forbiddencity1" />
            <ImageButton
                android:id="@+id/forbiddenCity1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forbiddenCity_info"
                android:textColor="#39332d" />




            <Button
                android:id="@+id/greatWall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Great Wall of China"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/greatwallofchina1" />
            <ImageButton
                android:id="@+id/greatWall1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greatWall_info"
                android:textColor="#39332d"/>





            <Button
                android:id="@+id/templeOfHeaven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Temple of Heaven"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/templeofheaven" />
            <ImageButton
                android:id="@+id/templeOfHeaven1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/templeofHeaven_info"
                android:textColor="#39332d"/>



            <Button
                android:id="@+id/mingTombs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Ming Tombs"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/mingtombs" />
            <ImageButton
                android:id="@+id/mingTombs1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingTomb_info"
                android:textColor="#39332d"/>



            <Button
                android:id="@+id/summerPalace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="#80cac7c7"
                android:text="Summer Palace"
                android:textColor="#ff8800"
                android:textSize="20dp" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="199dp"
                android:layout_height="118dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/summerpalace" />
            <ImageButton
                android:id="@+id/summerPalace1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/googlemapicon" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summerPalace_info"
                android:textColor="#39332d"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

